[package]
name = "helix-plugin"
version = "0.1.0"
edition = "2021"
# edition.workspace = true
# license.workspace = true
# rust-version.workspace = true

[workspace]

[dependencies]
extism-pdk = { path =  "../../rust-pdk" } # "https://github.com/extism/rust-pdk"
serde = { version = "1.0.193", features = ["derive"] }
